--- a/frontend/src/components/Menu/Menu.module.css
+++ b/frontend/src/components/Menu/Menu.module.css
@@ -75,37 +75,7 @@
 
 /* MENU MOBILE */
 .header nav .navResponsive {
-    position: absolute;
-    top: 80px;
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    margin: none;
-}
-
-.header nav .navResponsive button {
-    width: 100%;
-    height: 40px;
-    color: var(--white-color);
-    font-size: 14px;
-    font-weight: bold;
-    margin-bottom: 15px;
-    padding: 0 24px 0 24px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.header nav .navResponsive .franqueadoMobile {
-    background-color: var(--yellow);
-}
-
-.header nav .navResponsive .consultorMobile {
-    background-color: var(--purplo-secondary);
-}
-
-.header nav .navResponsive .comprarMobile {
-    background-color: var(--blue-light);
+    display: none;
 }
 
 /* RESPONSIVIDADE */
@@ -133,5 +103,40 @@
     .header nav .menu {
         display: block;
         cursor: pointer;
+    }
+
+    /* MENU MOBILE */
+    .header nav .navResponsive {
+        position: absolute;
+        top: 80px;
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin: none;
+    }
+
+    .header nav .navResponsive button {
+        width: 100%;
+        height: 40px;
+        color: var(--white-color);
+        font-size: 14px;
+        font-weight: bold;
+        margin-bottom: 15px;
+        padding: 0 24px 0 24px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .header nav .navResponsive .franqueadoMobile {
+        background-color: var(--yellow);
+    }
+
+    .header nav .navResponsive .consultorMobile {
+        background-color: var(--purplo-secondary);
+    }
+
+    .header nav .navResponsive .comprarMobile {
+        background-color: var(--blue-light);
     }
 }
